spargen/tests/snapshots/diff__added_required_field_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|required-field-added|Pet.tag|required field added: `String`
bump=major
