spargen/tests/snapshots/diff__adding_a_cycle_member_newtype_is_minor_and_removing_one_is_major-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-removed|Node|public type removed
major|field-type-changed|Pet.owner|field type `Node` -> `String`
bump=major
