spargen/tests/snapshots/diff__adding_a_cycle_member_newtype_is_minor_and_removing_one_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|field-type-changed|Pet.owner|field type `String` -> `Node`
minor|type-added|Node|new public type
bump=major
