spargen/tests/snapshots/diff__adding_a_public_type_is_minor_and_removing_one_is_major-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-removed|Owner|public type removed
major|field-type-changed|Pet.owner|field type `Owner` -> `String`
bump=major
