spargen/tests/snapshots/diff__adding_a_public_type_is_minor_and_removing_one_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|field-type-changed|Pet.owner|field type `String` -> `Owner`
minor|type-added|Owner|new public type
bump=major
