spargen/tests/snapshots/diff__adding_a_request_body_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|request-body-added|GET /pets|request body added: `Pet`
bump=major
