spargen/tests/snapshots/diff__adding_an_enum_variant_is_minor_and_removing_one_is_major-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|variant-removed|Status|variant removed: `pending`
bump=major
