spargen/tests/snapshots/diff__adding_an_enum_variant_is_minor_and_removing_one_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|variant-added|Status|variant added: `pending`
bump=minor
