spargen/tests/snapshots/diff__adding_an_uninhabited_component_is_minor_and_removing_one_is_major-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-removed|Nope|public type removed
bump=major
