spargen/tests/snapshots/diff__adding_an_uninhabited_component_is_minor_and_removing_one_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|type-added|Nope|new public type
bump=minor
