spargen/tests/snapshots/diff__an_array_alias_becoming_a_cycle_member_newtype_changes_its_kind-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|success-type-changed|GET /status|success type `Status` -> `Vec<String>`
major|type-kind-changed|Status|type kind `newtype` -> `alias`
bump=major
