spargen/tests/snapshots/diff__an_array_alias_becoming_a_cycle_member_newtype_changes_its_kind.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|success-type-changed|GET /status|success type `Vec<String>` -> `Status`
major|type-kind-changed|Status|type kind `alias` -> `newtype`
bump=major
